# parkrun-map

./: LICENSE  README.md  requirements.txt  setup.cfg  setup_serve_machine.sh
data/: course_data.csv
map_app/: map_app.py
parkrun_map/: map_app.py
parkrun_map/utils/: data.py  lookup.py  parse.py  s3.py
