[metadata]
name = parkrun-map
author = Luke Miller
author-email = fullname@gmail.com
summary = Display map of parkrunners' running records
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/lukerm/parkrun-map
license = All rights reserved
classifier =
    Programming Language :: Python :: 3
    Natural Language :: English
    Intended Audience :: Developers
keywords =
    parkrun
    python
    visualization
    mapping


[files]
packages =
    parkrun_map
